<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RemindMe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="create_new_alarm">Create New Alarm</string>
    <string name="details_alarm_name">Alarm Name</string>
    <string name="details_repeat_weekly">Repeat Weekly</string>
    <string name="details_sunday">Sunday</string>
    <string name="details_monday">Monday</string>
    <string name="details_tuesday">Tuesday</string>
    <string name="details_wednesday">Wednesday</string>
    <string name="details_thursday">Thursday</string>
    <string name="details_friday">Friday</string>
    <string name="details_saturday">Saturday</string>
    <string name="details_alarm_tone">Alarm Tone</string>
    <string name="details_alarm_tone_default">Select an alarm tone</string>
    <string name="add_reminder">+ Add Reminder</string>
    <string name="deleted">Confirm Delete</string>
    <string name="undo">Undo</string>
    
    <string-array name="which_week_options">
        <item> First </item>
        <item> Second </item>
        <item> Third </item>
        <item> Fourth </item>
    </string-array>

    <string-array name="day_options">
        <item> Sunday </item>
        <item> Monday </item>
        <item> Tuesday </item>
        <item> Wednesday </item>
        <item> Thursday </item>
        <item> Friday </item>
        <item> Saturday </item>
    </string-array>
    <color name ="orange">#FF4A1C</color>
    <color name ="teal"> #02798c </color>
    <color name = "black">#000000</color>

</resources>
