<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation='vertical'
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit blank alarm..."
        android:textColor = "#FFFFFF"
        android:textSize = "30dp"
        android:id="@+id/editBlank"
        android:layout_alignParentTop="true"
        />


    <TimePicker
        android:id="@+id/timePicker"
        android:layout_below="@+id/editBlank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TimePicker>

    <!--<TextView-->
        <!--android:id="@+id/setDays"-->
        <!--android:text="Edit days"-->
        <!--android:textSize="25dp"-->
        <!--android:textColor="#FFFFFF"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->
    <!--<View-->
        <!--android:id="@+id/divider2"-->
        <!--style="@style/Divider"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_below="@+id/setDays" />-->



    <!--<View-->
        <!--android:id="@+id/divider1"-->
        <!--style="@style/Divider"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_below="@+id/divider2"/>-->

    <cs121.hmc.edu.remindme.CustomSwitch
        android:id="@+id/alarm_details_label_sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/timePicker"
        android:checked="true"
        android:text="@string/details_sunday" />

    <cs121.hmc.edu.remindme.CustomSwitch
        android:id="@+id/alarm_details_label_monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/alarm_details_label_sunday"
        android:checked="true"
        android:text="@string/details_monday" />

    <cs121.hmc.edu.remindme.CustomSwitch
        android:id="@+id/alarm_details_label_tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/alarm_details_label_monday"
        android:checked="true"
        android:text="@string/details_tuesday" />

    <cs121.hmc.edu.remindme.CustomSwitch
        android:id="@+id/alarm_details_label_wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/alarm_details_label_tuesday"
        android:checked="true"
        android:text="@string/details_wednesday" />

    <cs121.hmc.edu.remindme.CustomSwitch
        android:id="@+id/alarm_details_label_thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/alarm_details_label_wednesday"
        android:checked="true"
        android:text="@string/details_thursday" />

    <cs121.hmc.edu.remindme.CustomSwitch
        android:id="@+id/alarm_details_label_friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/alarm_details_label_thursday"
        android:checked="true"
        android:text="@string/details_friday" />

    <cs121.hmc.edu.remindme.CustomSwitch
        android:id="@+id/alarm_details_label_saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/alarm_details_label_friday"
        android:checked="true"
        android:text="@string/details_saturday" />
    <View
        android:id="@+id/divider4"
        style="@style/Divider"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/alarm_details_label_saturday" />



        <View
            android:id="@+id/divider3"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/divider4" />

        <Button
            style = "@style/actionbutton"
            android:id="@+id/btn_done"
            android:text= "Next"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider3"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
</ScrollView>